# OSTerm_Project

./: CMakeLists.txt  README.md  directionEntry.h  inode.h  inodeFunctions.cpp  inodeFunctions.h  main.cpp  mbr.h  partitionData.h  partitionFunctions.cpp  partitionFunctions.h  superBlockFunctions.cpp  superBlockFunctions.h  superblock.h  testDump.c  testDump.h  testVDI.c  testVDI.h  vdiFile.h  vdiFunctions.cpp  vdiFunctions.h  vdiHeader.h
