cmake_minimum_required(VERSION 3.19)
project(Term_Project)

set(CMAKE_CXX_STANDARD 14)

add_executable(Term_Project main.cpp partitionFunctions.cpp partitionFunctions.h vdiHeader.h vdiFile.h superBlockFunctions.cpp superBlockFunctions.h inodeFunctions.cpp inodeFunctions.h partitionFunctions.cpp partitionFunctions.h partitionFunctions.cpp partitionFunctions.h)